video file added

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<button class="button">Manager</button>
 	</div>
 	<div class="player">
-		<video class="views" src="https://video.cdntpondemand.com/we-are2.mp4"></video>
+		<video class="views" src="file/we-are2.mp4"></video>
 	</div>
 	<div class="footer">
 		<a href="https://www.targetprocess.com/about/" target="_blank">👣 Orginal Idea </a>
